# travelbot

./: .env.example  .gitignore  CLAUDE.md  README.md  design.md  pyproject.toml  requirements.md  tasks.md
app/: config.py  main.py
app/api/: dependencies.py
app/api/routers/: chat.py  health.py  ingest.py
app/core/: formatter.py  models.py  router.py
app/core/document/: chunker.py  parser.py
app/core/llm/: claude_adapter.py  factory.py  gateway.py  openai_adapter.py
app/core/rag/: prompt_builder.py  retriever.py
app/core/vector_store/: base.py  chroma.py
app/models/: chat.py  ingest.py
app/services/: chat_service.py  ingestion_service.py
frontend/: index.html
